fix bulletin info spill

--- a/app/assets/stylesheets/bulletin.scss
+++ b/app/assets/stylesheets/bulletin.scss
@@ -19,6 +19,7 @@
     .link, .bulletin-info {
       display: inline-block;
       vertical-align: top;
+      width: 80%;
     }
     .link {
       width: 20%;
